feat: migrate to @xivdyetools/types and @xivdyetools/logger
- Add @xivdyetools/types and @xivdyetools/logger as dependencies
- Refactor src/types.ts to re-export shared types from @xivdyetools/types
- Keep project-specific types (Env, UserRow) local

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@xivdyetools/logger": "^1.0.0",
+    "@xivdyetools/types": "^1.0.0",
     "hono": "^4.6.0"
   },
   "devDependencies": {
